Changelog
=========

4.1 - unreleased
----------------

- Update to require Plone 4.1.
  [hannosch]

- Notify p.a.caching to purge translations when the canonical object is purged.
  [ggozad, stefan]

- Changed permission for the controlpanel to `plone.app.controlpanel.Language`.
  This allows users with the `Site Administrator` role to access it.
  [toutpt]

4.0.4 - 2011-07-25
------------------

- Selector should not propose link to inaccessible content (content for which
  the user does not have View permission). If a translation exist but is
  inaccessible, follow the acquisition chain until a translated item is
  accessible. In case we get to an inaccessible INavigationRoot, do not show
  the language at all.
  [gotcha]

- Removed broken icons and fix invalid XHTML in translation browser popup.
  [hannosch]

- Link to translation browser popup was broken in some VirtualHost setups.
  This closes http://plone.org/products/linguaplone/issues/277.
  [tgraf, hannosch]

- Use template parameter in language selector's viewlet zcml declaration. This
  makes it easier to customize in add-ons. The change requires plone.app.i18n
  2.0.1 or greater.
  [toutpt]

- Force translate menu flag icons dimensions to 14x11 px, so that it's
  consistent with language selector menu. Works with
  plone.app.contentmenu 2.0.4+.
  [thomasdesvenain]

- Changed policy for preserving the view/template in the language selector. We
  only do this if the target item is a direct translation of the current
  context. Otherwise we might link to views which are not available on the
  target content type.
  [thomasdesvenain, hannosch]

- translate_item form works when content has no 'default' fieldset.
  [thomasdesvenain]

- Declare plone.app.iterate dependency.
  [thomasdesvenain]

4.0.3 - 2011-05-27
------------------

- Changed string exceptions to ValueErrors in `translate_edit.cpy`.
  [robert]

- Fix the tests to work with GenericSetup 1.6.3+.
  [hannosch]
